<resources>
    <string name="app_name">OXgame</string>
    <string name="masu">TODO</string>
    <string name="topLeft">00</string>
    <string name="top">01</string>
    <string name="topRight">02</string>
    <string name="centerLeft">10</string>
    <string name="center">11</string>
    <string name="centerRight">12</string>
    <string name="bottomLeft">20</string>
    <string name="bottom">21</string>
    <string name="bottomRight">22</string>
    <string name="reset">リセット</string>
    <string name="_1p_cpu">1P(CPU対戦)</string>
    <string name="_2p_pvp">2P(PVP対戦)</string>
    <string name="game_start">人数を選択してゲームスタート</string>
</resources>