<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/masu"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:background="@drawable/masu"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/center"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/center"
            android:onClick="onButton"
            android:src="@drawable/none" />
        <ImageButton
            android:id="@+id/top"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_above="@+id/center"
            android:layout_alignStart="@+id/center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/top"/>
        <ImageButton
            android:id="@+id/topLeft"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_above="@+id/center"
            android:layout_toStartOf="@+id/center"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/topLeft"/>
        <ImageButton
            android:id="@+id/topRight"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_above="@+id/center"
            android:layout_toEndOf="@+id/center"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/topRight"/>
        <ImageButton
            android:id="@+id/centerLeft"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_alignTop="@+id/center"
            android:layout_toStartOf="@+id/center"
            android:layout_marginEnd="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/centerLeft"/>
        <ImageButton
            android:id="@+id/centerRight"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_alignTop="@+id/center"
            android:layout_toEndOf="@+id/center"
            android:layout_marginStart="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/centerRight"/>
        <ImageButton
            android:id="@+id/bottom"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_alignStart="@+id/center"
            android:layout_below="@+id/center"
            android:layout_marginTop="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/bottom"/>
        <ImageButton
            android:id="@+id/bottomLeft"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_below="@+id/center"
            android:layout_toStartOf="@+id/center"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20sp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/bottomLeft"/>
        <ImageButton
            android:id="@+id/bottomRight"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_below="@+id/center"
            android:layout_toEndOf="@+id/center"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20dp"
            android:src="@drawable/none"
            android:onClick="onButton"
            android:contentDescription="@string/bottomRight" />
    </RelativeLayout>
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="onReset"
        android:text="@string/reset" />
</LinearLayout>